--- a/sources/USB2SWire/.project
+++ b/sources/USB2SWire/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Usbfloader_</name>
+	<name>USB2SWire</name>
 	<comment></comment>
 	<projects>
 	</projects>
